# czibaldone

./: README.md  macros.h
cmake_4_lib_project/: .gitignore  CMakeLists.txt
cmake_4_lib_project/cmake/: _libname_.pc.in
cmake_4_lib_project/include/: _libname_.h
cmake_4_lib_project/libs/: CMakeLists.txt
cmake_4_lib_project/man/: CMakeLists.txt  Makefile  _libname_.3.ronn
cmake_4_lib_project/src/: CMakeLists.txt  _libname_.c
cmake_4_lib_project/test/: CMakeLists.txt
cmake_libtemplate/: .gitignore  CMakeLists.txt  README.md
cmake_libtemplate/cmake/: config.h.in
cmake_libtemplate/include/: syshello.h
cmake_libtemplate/lib/: formatter.c  formatter.h
cmake_libtemplate/lib/formatter/: CMakeLists.txt  formatter.h
cmake_libtemplate/man/: syshello.3  syshello.3.ronn
cmake_libtemplate/src/: CMakeLists.txt  syshello.c  utils.c  utils.h
cmake_libtemplate/src/sysdeps/: sysname.h
cmake_libtemplate/src/sysdeps/linux/: sysname.c
cmake_libtemplate/src/sysdeps/macos/: CMakeLists.txt  sysname.c
cmake_libtemplate/src/sysdeps/windows/: sysname.c
cmake_libtemplate/test/: tst_hello.c  tst_hello_version.c
